# migreat

./: .coveragerc  .editorconfig  .flake8  .gitignore  .isort.cfg  3.7.Dockerfile  3.8.Dockerfile  3.9.Dockerfile  README.md  dev-min-requirements.txt  manage.py  pyproject.toml  pytest.ini  requirements.txt  run  setup.cfg  setup.py
migreat/: __init__.py  __main__.py
scripts/: install-pre-commit.sh
tests/: cli.py  conftest.py  create_migrations_table_function.py  create_user_id_foreign_key_function.py  drop_user_id_foreign_key_function.py  run_migrations_function.py  test_cli.py  test_create_user_id_foreign_key_function.py  test_drop_migrations_table_function.py  test_drop_user_id_foreign_key_function.py  test_run_migrations_function.py
tests/fakepkg/: postgresql.py
tests/migrations_invalid_name/: 2020-01-01-01-create-users-table.sql  2020-01-02-create-customers-table.sql
